# Lemon

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: publish.yml  standards.yml
examples/: code_blocks.py  header.py  inline_styling.py  links.py  table.py
lemon/: __init__.py  blockquotes.py  core.py  header.py  lex.py  links.py  markdown.py  parse.py  search.py  serialize.py  snippets.py  style.py  tables.py
lemon/markdown/: __init__.py  codeblock.py  header.py  lex.py  links.py  markdown.py  parse.py  serialize.py  style.py  tables.py
tests/: test_dumping.py  test_loading.py  test_searching.py  test_serialization.py
