
[tool.poetry]
name = "lemon"
version = "0.1.0"
description = "Easily access, serialize, and synthesize markdown information!"
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pytest = "^7.1.2"


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
