
[tool.poetry]
name = "lemon-md"
version = "0.2.0"
description = "Easily access, serialize, and synthesize markdown information!"
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
packages = [
    { include = "lemon" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pytest = "^7.1.2"
pylint = "^2.14.0"

[tool.pylint.messages_control] 
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "cyclic-import"
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
